# claude-ns-hub

./: .bark-key  .bark-keys  .ctx-hub-nudge-sent  .gitignore  .gitleaksignore  .hub-agg-state.json  .notify-secret  .pre-commit-config.yaml  .tg-last-sent.json  .windows-peers  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  HOOKS_ANALYSIS_2026-04-10.md  LICENSE  MANIFEST.in  NOTICE  README.md  __init__.py  ctx-first-use.done  ctx-session-state.json  ctx-telemetry-consent.json  ctx-telemetry-upload-state.json  ctx-user-id.hash  darwin-mode.sh  hub-dataset-export.py  hub-dataset-stats.py  hub-windows-install.bat  install.sh  last-cm-injection.json  last-retrieval-meta.json  mcp-needs-auth-cache.json  memory-context-hint.md  memory-save-hint.md  pyproject.toml  server.py  settings.json  settings.json - claude  settings.json - minimax  (+2 more)
hub/: .gitignore  .ntfy-topic  .playwright-hook.json  README.md  milestone-watcher.py  northstar.json  pyproject.toml  pyproject.toml.bak2  server.py  task-watcher-hardened.py  task-worker.py  task-worker.sh  test-task-worker.py  verify.py
hub/certs/: desk-1-1.tailb5ab18.ts.net.crt
hub/hub/: server.py
hub/northstar_hub.egg-info/: PKG-INFO
hub/static/: index.html  landing.html  market-signals.html  northstar.html
hub/task-queue/: task-CTX-20260511-000735-556.md  task-CTX-M10-20260511-003459.md  task-CTX-M7-20260511-003459.md  task-CTX-M8-20260511-003459.md  task-CTX-M9-20260511-003459.md  task-Clone-20260511-003523-169.md  task-Clone-20260511-003526-341.md  task-Clone-20260511-003526-413.md  task-Clone-20260511-003545-222.md  task-Clone-20260511-003550-581.md  task-FRWP-20260511-000425-994.md  task-FromScratch-20260511-000303-960.md  task-MOAT-20260510-225214-223.md  task-MOAT-20260510-231017-062.md  task-MOAT-20260511-003018-717.md  task-MOAT-20260511-003557-947.md  task-MOAT-M16-20260511-002010.md  task-MOAT-M18-20260510-232741.md  task-MOAT-M18-20260511-002010.md  task-MOAT-M19-20260511-002010.md  task-test-001.md
hub/task-results/: task-CTX-20260511-000726-610.json  task-CTX-20260511-000735-556.json  task-CTX-M10-20260511-003417.json  task-CTX-M10-20260511-003459.json  task-CTX-M7-20260511-003417.json  task-CTX-M7-20260511-003459.json  task-CTX-M8-20260511-003417.json  task-CTX-M8-20260511-003459.json  task-CTX-M9-20260511-003417.json  task-CTX-M9-20260511-003459.json  task-Clone-20260511-003523-169.json  task-Clone-20260511-003526-341.json  task-Clone-20260511-003526-413.json  task-Clone-20260511-003545-222.json  task-Clone-20260511-003547-443.json  task-test-001.json  (+18 more)
(+7099 files in other folders)
