[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "northstar-hub"
version = "0.1.0"
description = "Personal AI project management hub — North Star milestone tracking, live Claude sessions, CTX context alignment."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "project-management", "claude", "northstar", "milestones", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Scheduling",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "ptyprocess>=0.7",
  "anthropic>=0.28",
]

[project.scripts]
northstar-hub = "hub.server:main"

[project.urls]
Homepage = "https://github.com/be2jay/northstar-hub"
Issues   = "https://github.com/be2jay/northstar-hub/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hub*"]

[tool.setuptools.package-data]
hub = ["static/*"]
