[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar-hub"
version = "0.2.4"
description = "Personal AI project management hub — North Star milestone tracking, live Claude sessions, CTX context alignment."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "project-management", "claude", "northstar", "milestones", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Scheduling",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "ptyprocess>=0.7",
  "anthropic>=0.28",
]

[project.optional-dependencies]
ctx = ["ctx-server>=0.1"]

[project.scripts]
northstar-hub = "hub.server:main"

[project.urls]
Homepage = "https://github.com/jaytoone/claude-client-bootstrap"
Issues   = "https://github.com/jaytoone/claude-client-bootstrap/issues"

[tool.setuptools.packages.find]
where = [".."]
include = ["hub", "hub.*"]

[tool.setuptools.package-data]
hub = ["static/*", "static/**/*"]
